@@ -1,3 +1,7 @@
+Mon Apr 23 15:20:55 BST 2007  Olly Betts <olly@survex.com>
+
+	* common/safeunistd.h: Comment tweaks.
+
 Mon Apr 23 11:54:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* common/safeunistd.h: Include <process.h> on windows to get
